small fixes in header on mobile

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -68,11 +68,11 @@
 @media (max-width: 768px) {
   .header {
     flex-direction: column;
-    align-items: stretch;
+    align-items: right;
   }
 
   .header-left {
-    justify-content: space-between;
+    flex-direction: left;
     width: 100%;
   }
 
